style(workplace): various styling tweaks

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -19,7 +19,7 @@ a[button],
     min-height: 3em;
 
     &.inverse {
-        background-color: #fff;
+        background: none;
         color: var(--color);
     }
 
