--- a/apps/survey/src/app/create-survey-form/create-survey-form.component.html
+++ b/apps/survey/src/app/create-survey-form/create-survey-form.component.html
@@ -1,1 +1,10 @@
-<p>create-survey-form works!</p>
+<H2>Create Survey</H2>
+
+<button (click)="addTextQuestion()">Add text question</button>
+<button (click)="addCheckboxQuestion()">Add checkbox question</button>
+
+<h2>{{ survey_title }}</h2>
+<div id="surveyContainer"></div>
+
+<H2>Survey Results</H2>
+<div id="surveyResults"></div>
