feat(survey): worked on creating survey JSON, submitting survey and rendering answer to template

--- a/apps/survey/src/app/create-survey-form/create-survey-form.component.html
+++ b/apps/survey/src/app/create-survey-form/create-survey-form.component.html
@@ -8,6 +8,7 @@
     style="display: flex; flex-direction: column; width: 600px; margin: 2rem"
 ></div>
 
+<button (click)="submitSurvey()" style="margin: 3rem">Submit survey</button>
 <button (click)="reset()">Reset survey</button>
 <h2>{{ survey_title }}</h2>
 <div id="surveyContainer"></div>
