chore: minor style tweak

--- a/shared/styles/application.scss
+++ b/shared/styles/application.scss
@@ -98,7 +98,7 @@ body.dark {
     font-feature-settings: 'liga';
 }
 
-.material-icons-outline {
+.material-icons-outlined {
     font-family: 'Material Icons Outlined';
     font-weight: normal;
     font-style: normal;
