feat(survey): add dropdown and rating question types

--- a/apps/survey/src/app/create-survey-form/create-survey-form.component.html
+++ b/apps/survey/src/app/create-survey-form/create-survey-form.component.html
@@ -2,6 +2,8 @@
 
 <button (click)="addTextQuestion()">Add text question</button>
 <button (click)="addCheckboxQuestion()">Add checkbox question</button>
+<button (click)="addDropdownQuestion()">Add dropdown question</button>
+<button (click)="addRatingQuestion()">Add rating question</button>
 
 <div
     id="questionForm"
