refactor(survey): refactor input-title input field to accept size and placeholder input values

--- a/apps/survey/src/app/create-survey-form/create-survey-form.component.html
+++ b/apps/survey/src/app/create-survey-form/create-survey-form.component.html
@@ -18,4 +18,4 @@
 <H2>Survey Results</H2>
 <div id="surveyResults"></div>
 
-<input-title></input-title>
+<input-title [placeholder]="'Survey Title'" [fontSize]="'30'"></input-title>
