--- a/apps/survey/src/app/create-survey-form/create-survey-form.component.html
+++ b/apps/survey/src/app/create-survey-form/create-survey-form.component.html
@@ -19,3 +19,7 @@
 <div id="surveyResults"></div>
 
 <input-title [placeholder]="'Survey Title'" [fontSize]="'30'"></input-title>
+<button-with-icon
+    [button_title]="'Delete'"
+    [icon]="'delete'"
+></button-with-icon>
