feat(survey): add text-question and rating-question previews for drag-and-drop

--- a/apps/survey/src/app/create-survey-form/create-survey-form.component.html
+++ b/apps/survey/src/app/create-survey-form/create-survey-form.component.html
@@ -1,27 +1,9 @@
-<H2>Create Survey</H2>
-
-<button (click)="addTextQuestion()">Add text question</button>
-<button (click)="addCheckboxQuestion()">Add checkbox question</button>
-<button (click)="addDropdownQuestion()">Add dropdown question</button>
-<button (click)="addRatingQuestion()">Add rating question</button>
-
-<div
-    id="questionForm"
-    style="display: flex; flex-direction: column; width: 500px; margin: 2rem"
-></div>
-
-<button (click)="submitSurvey()" style="margin: 3rem">Submit survey</button>
-<button (click)="reset()">Reset survey</button>
-<h2>{{ survey_title }}</h2>
-<div id="surveyContainer"></div>
-
-<H2>Survey Results</H2>
-<div id="surveyResults"></div>
-
-<input-title [placeholder]="'Survey Title'" [fontSize]="'30'"></input-title>
-<button-with-icon
+<!-- <input-title [placeholder]="'Survey Title'" [fontSize]="'30'"></input-title> -->
+<!-- <button-with-icon
     [button_title]="'Delete'"
     [icon]="'delete'"
-></button-with-icon>
+></button-with-icon> -->
 
-<question-box></question-box>
+<!-- <question-box></question-box>  -->
+
+<design-preview-container></design-preview-container>
