style(survey): tweak styling of preview container as per mocks

--- a/libs/survey-creator/src/lib/components/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/components/design-preview-container.component.html
@@ -90,13 +90,15 @@
                                 [preview]="true"
                             ></text-question>
                         </div>
-                        <button
-                            mat-button
-                            color="primary"
-                            class="complete-button"
-                        >
-                            Complete
-                        </button>
+                        <div class="preview-list">
+                            <button
+                                mat-button
+                                color="primary"
+                                class="complete-button"
+                            >
+                                Complete
+                            </button>
+                        </div>
                     </div>
                 </ng-template>
             </mat-tab>
