style(survey): minor tweaks to plus and minus button styling as per mocks

--- a/libs/survey-creator/src/lib/components/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/components/design-preview-container.component.html
@@ -100,7 +100,10 @@
                                 [preview]="true"
                             ></checkbox-question>
                         </div>
-                        <div class="preview-list">
+                        <div
+                            class="preview-list"
+                            *ngIf="selected_questions.length"
+                        >
                             <button
                                 mat-button
                                 color="primary"
