refactor(survey): if question is already selected, it will not be added a second time if drag and dropped again

--- a/libs/survey-creator/src/lib/components/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/components/design-preview-container.component.html
@@ -40,7 +40,10 @@
                                     >
                                     </rating-question>
                                     <text-question
-                                        *ngIf="item.type === 'Text'"
+                                        *ngIf="
+                                            item.type === 'Text' ||
+                                            item.type === 'Comment'
+                                        "
                                         [question]="item"
                                         [preview]="false"
                                     ></text-question>
@@ -90,7 +93,10 @@
                             >
                             </rating-question>
                             <text-question
-                                *ngIf="item.type === 'Text'"
+                                *ngIf="
+                                    item.type === 'Text' ||
+                                    item.type === 'Comment'
+                                "
                                 [question]="item"
                                 [preview]="true"
                             ></text-question>
