feat(survey): work on generating schema

--- a/libs/survey-creator/src/lib/components/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/components/design-preview-container.component.html
@@ -128,6 +128,7 @@
                                 mat-button
                                 color="primary"
                                 class="complete-button"
+                                (click)="surveyCreatorService.submitSurvey()"
                             >
                                 Complete
                             </button>
