feat(concierge): add dark mode styles

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -687,6 +687,11 @@ custom-table[header-dark] {
 
         }
 
+        .mat-paginator {
+            background-color: inherit;
+            color: inherit;
+        }
+
 
         .mat-spinner {
             circle {
