feat(survey): edit question modal added

--- a/libs/survey-creator/src/lib/components/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/components/design-preview-container.component.html
@@ -155,6 +155,7 @@
                 <buttons-borderless
                     [button_title]="'Edit'"
                     [icon]="'edit'"
+                    (click)="openEditQuestionBankDialog()"
                 ></buttons-borderless>
                 <buttons-borderless
                     [button_title]="'Add'"
