--- a/apps/outlook-rooms-addin/src/app/rooms/room-booking.component.html
+++ b/apps/outlook-rooms-addin/src/app/rooms/room-booking.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-1 flex-col z-0 m-0 bg-gray-50 h-full overflow-y-auto">
+<div class="flex flex-1 flex-col z-0 m-0 bg-gray-50 dark:bg-neutral-600 h-full overflow-y-auto">
     <form *ngIf="form" [formGroup]="form">
-        <section class="flex flex-col border border-gray-300 py-5 items-center">
+        <section class="flex flex-col border-b border-gray-300 dark:border-neutral-500 py-5 items-center">
             <div
                 class="flex flex-col w-[calc(100%-2rem)] max-w-[360px] self-center"
             >
@@ -8,7 +8,7 @@
 
                 <div class="flex flex-row">
                     <div
-                        class="border border-black rounded-full w-7 h-7 text-center"
+                        class="border border-black dark:border-neutral-500 rounded-full w-7 h-7 text-center"
                     >
                         <span>1</span>
                     </div>
@@ -16,7 +16,7 @@
                 </div>
 
                 <div class="flex flex-col">
-                    <label class="text-sm font-bold text-gray-700 mb-1"
+                    <label class="text-sm font-bold mb-1"
                         >Add Title*</label
                     >
                     <mat-form-field appearance="outline">
@@ -29,7 +29,7 @@
                     </mat-form-field>
                 </div>
                 <div class="flex flex-col">
-                    <label class="text-sm font-bold text-gray-700 mb-1"
+                    <label class="text-sm font-bold mb-1"
                         >Date*</label
                     >
                     <a-date-field
@@ -40,7 +40,7 @@
                 </div>
                 <div class="flex flex-row -mb-5 space-x-2">
                     <div class="flex flex-col w-1/2">
-                        <label class="text-sm font-bold text-gray-700 mb-1">
+                        <label class="text-sm font-bold mb-1">
                             Start Time*
                         </label>
                         <a-time-field
@@ -51,7 +51,7 @@
                         ></a-time-field>
                     </div>
                     <div class="flex flex-col w-1/2 ml-auto">
-                        <label class="text-sm font-bold text-gray-700 mb-1">
+                        <label class="text-sm font-bold mb-1">
                             End Time*
                         </label>
                         <a-duration-field
@@ -68,14 +68,14 @@
         </section>
 
         <section
-            class="flex flex-col py-3 border-b border-gray-300 items-center"
+            class="flex flex-col py-3 border-b border-gray-300 dark:border-neutral-500 items-center"
         >
             <div
                 class="flex flex-col w-[calc(100%-2rem)] max-w-[360px] self-center"
             >
                 <div class="flex flex-row">
                     <div
-                        class="border border-black rounded-full w-7 h-7 text-center"
+                        class="border border-black dark:border-neutral-500 rounded-full w-7 h-7 text-center"
                     >
                         <span>2</span>
                     </div>
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="flex flex-col">
-                    <label class="text-sm font-bold text-gray-700 mb-1">
+                    <label class="text-sm font-bold mb-1">
                         Add Attendees
                     </label>
 
@@ -98,7 +98,7 @@
         </section>
 
         <section
-            class="flex flex-col py-3 border border-gray-300 top-box-shadow items-center justify-center"
+            class="flex flex-col py-3 items-center justify-center"
         >
             <button
                 mat-button
@@ -111,7 +111,7 @@
             <button
                 mat-button
                 (click)="clearForm()"
-                class="text-sm bg-white text-secondary border-secondary my-2 min-w-[300px] max-w-[calc(100% - 2rem)] mx-auto"
+                class="text-sm bg-transparent text-secondary border-secondary my-2 min-w-[300px] max-w-[calc(100% - 2rem)] mx-auto"
             >
                 <span class="text-sm">Clear form</span>
             </button>
